--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ethers": "^5.6.4",
     "lodash": "^4.17.21",
     "pg": "^8.7.3",
+    "type-graphql": "^1.2.0-rc.1",
     "typeorm": "^0.3.6"
   },
   "devDependencies": {
