--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -24,7 +24,8 @@ tasks:
       gp sync-done setup
   - name: DB
     command: |
-      make up
+      gp sync-await setup
+      npx sqd up
       gp sync-done db
   - name: GraphQL API
     command: |
@@ -32,7 +33,6 @@ tasks:
       gp sync-await db
       npx sqd serve
   - command: |
-      gp sync-await setup
       gp ports await 4350 
       gp preview $(gp url 4350)/graphql
   - name: Squid procesor
